--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ target/
 .settings/
 .idea/
 
+# Local copy of https://github.com/adobe-webplatform/Snap.svg/tree/master/demos for reference
+js_demos/
+
 # OS X generated files
 .DS_Store
 
